@@ -1,3 +1,7 @@
+Wed Mar 26 08:14:27 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/fieldactions.py: Tidy up the imports in this file, too.
+
 Wed Mar 26 07:52:47 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
 
 	* xappy/__init__.py,xappy/datastructures.py,
